--- a/ClearMine.Help/html/ClearMine - How to play.html
+++ b/ClearMine.Help/html/ClearMine - How to play.html
@@ -1,11 +1,11 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 <title>Clear Mine - How to play</title>
 <link href="../styles/Classic.css" rel="stylesheet" type="text/css"></link>
-<script type="text/javascript" src="../scripts/script.js"></script>
+<script type="text/javascript" src="../scripts/common.js"></script>
 <script type="text/javascript" src="../scripts/chmscript.js"></script>
 </head>
 
